<resources>
    <string name="app_name">Sauron</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="title_activity_choose_point">ChoosePointActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_join">JoinActivity</string>
    <!-- DESCRIPTIONS  -->
    <string name="logodesc">Eye of Souron Logo</string>
    <string name="profilepicdesc">Your Profile Picture</string>
    <string name="edittextdesc">Edit the text</string>
    <string name="nameboxdesc">Edit your name</string>
    <string name="creategroupdesc">Your Profile Picture</string>
    <string name="memberlistdesc">List of Members</string>
    <string name="scanqrdesc">Your qr code scan window</string>
    <string name="maprallyviewdesc">Image of rally point on map</string>
    <string name="phonenumdesc">Phone number currently used</string>
    <!-- STRINGS   -->
    <string name="creategroup">Create Group</string>
    <string name="hotsurface">Hot Surface</string>
    <string name="joingroup">Join Group</string>
    <string name="profile">Hot Profile</string>
    <string name="name">Name</string>
    <string name="scan">Scan</string>
    <string name="nfc">NFC</string>
    <string name="phonenum">Phone Number</string>
    <string name="phone">Phone/string></string>
    <string name="utxt">Unlimited TXT</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="groupname">Group Name</string>
    <string name="nfcprogress">NFC Progress</string>
    <string name="scanqr">Scan QR Code</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="chooseraly">Choose Rally Point</string>
    <string name="inputraly">Input Rally</string>
    <string name="genrally">Generate Rally</string>
    <string name="listconn">Connections List</string>
    <string name="noNfc">The device does not has NFC hardware.</string>
    <string name="nfcDisbaled">Please enable NFC via Settings.</string>
    <string name="androidBeamDisabled">Please enable Android Beam.</string>
    <!--  VARIABLES  -->
    <string name="inputname">Enter Name&#8230;</string>
    <string name="title_activity_qrscan">QRscanActivity</string>
    <string name="title_activity_nfcscan">NFCscanActivity</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="btSave">Save</string>


</resources>
